--- a/src/graph/templates/graph/index.html
+++ b/src/graph/templates/graph/index.html
@@ -1,1 +1,74 @@
-<h1>Testing Graph Index</h1>
+<html>
+<head>
+	<style type="text/css">
+		.sidenav {
+			height: 100%;
+			width:  22vw;
+			min-width: 200px;
+			position: fixed;
+			top: 0;
+			left:0;
+			background-color: #f1f1f1;
+			overflow-x: hidden;
+			padding-top: 20px;
+		}
+
+		.sideTitle {
+			text-align: center;
+			font-size: 28px;
+			font-family: Roboto, sans-serif;
+		}
+
+		.sidenav a {
+			padding: 6px 8px 6px 16px;
+			text-decoration: none;
+			font-size: 25px;
+			display: block;
+			border-radius: 10px;
+		}
+
+		.sidenav a:hover{
+			color:#f1f1f1;
+		}
+
+		.property{
+			margin: 10px;
+			padding: 5px;
+			border-radius: 10px;
+			border: black solid;
+		}
+
+	</style>
+	<title>Tom's Site</title>
+</head>
+
+<body>
+	<div class="sidenav">
+		<div class="sideTitle">Sample Graph 1 Info</div>
+		<div class="property">
+			<span style="font-weight: bold">Type</span>
+			<span style="float: right">Hardcoded</span>
+		</div>
+		<div class="property">
+			<div>
+			<span style="font-weight: bold">Ports (X)</span>
+			<span style="float: right">Add Port</span>
+			</div>
+			<span>Click to add a Node</span>
+		</div>
+		<div class="property">
+			<div>
+			<span style="font-weight: bold">Ports (X)</span>
+			<span style="float: right">Add Edge</span>
+			</div>
+			<span>Click to add an Edge</span>
+		</div>
+		<div class="property">
+			<span style="font-weight: bold">Add other Properties</span>
+		</div>
+	</div>
+
+    <p>hello</p>
+
+</body>
+</html>
