--- a/src/graph/templates/graph/index.html
+++ b/src/graph/templates/graph/index.html
@@ -1,74 +1,91 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<style type="text/css">
-		.sidenav {
-			height: 100%;
-			width:  22vw;
-			min-width: 200px;
-			position: fixed;
-			top: 0;
-			left:0;
-			background-color: #f1f1f1;
-			overflow-x: hidden;
-			padding-top: 20px;
-		}
+    <meta charset="UTF-8">
+    <style type="text/css">
+        .sidenav {
+            height: 100%;
+            width: 22vw;
+            min-width: 200px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #f1f1f1;
+            overflow-x: hidden;
+            padding-top: 20px;
+        }
 
-		.sideTitle {
-			text-align: center;
-			font-size: 28px;
-			font-family: Roboto, sans-serif;
-		}
+        .sideTitle {
+            text-align: center;
+            font-size: 28px;
+            font-family: Roboto, sans-serif;
+        }
 
-		.sidenav a {
-			padding: 6px 8px 6px 16px;
-			text-decoration: none;
-			font-size: 25px;
-			display: block;
-			border-radius: 10px;
-		}
+        .sidenav a {
+            padding: 6px 8px 6px 16px;
+            text-decoration: none;
+            font-size: 25px;
+            display: block;
+            border-radius: 10px;
+        }
 
-		.sidenav a:hover{
-			color:#f1f1f1;
-		}
+        .sidenav a:hover {
+            color: #f1f1f1;
+        }
 
-		.property{
-			margin: 10px;
-			padding: 5px;
-			border-radius: 10px;
-			border: black solid;
-		}
+        .property {
+            margin: 10px;
+            padding: 5px;
+            border-radius: 10px;
+            border: black solid;
+        }
 
-	</style>
-	<title>Tom's Site</title>
+
+    </style>
+    <title>NetView</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous"
+    >
 </head>
 
 <body>
-	<div class="sidenav">
-		<div class="sideTitle">Sample Graph 1 Info</div>
-		<div class="property">
-			<span style="font-weight: bold">Type</span>
-			<span style="float: right">Hardcoded</span>
-		</div>
-		<div class="property">
-			<div>
-			<span style="font-weight: bold">Ports (X)</span>
-			<span style="float: right">Add Port</span>
-			</div>
-			<span>Click to add a Node</span>
-		</div>
-		<div class="property">
-			<div>
-			<span style="font-weight: bold">Ports (X)</span>
-			<span style="float: right">Add Edge</span>
-			</div>
-			<span>Click to add an Edge</span>
-		</div>
-		<div class="property">
-			<span style="font-weight: bold">Add other Properties</span>
-		</div>
-	</div>
-
-    <p>hello</p>
-
+<div class="sidenav">
+    <div class="sideTitle">Sample Graph 1 Info</div>
+    <div class="property">
+        <span style="font-weight: bold">Type</span>
+        <span style="float: right">Hardcoded</span>
+    </div>
+    <div class="property">
+        <div>
+            <span style="font-weight: bold">Ports (X)</span>
+            <span style="float: right">Add Port</span>
+        </div>
+        {% block list %}
+        <span>Click to add a Node</span>
+        {% endblock %}
+    </div>
+    <div class="property">
+        <div>
+            <span style="font-weight: bold">Ports (X)</span>
+            <span style="float: right">Add Edge</span>
+        </div>
+        <span>Click to add an Edge</span>
+    </div>
+    <div class="property">
+        <span style="font-weight: bold">Add other Properties</span>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
