Added Post Functionality

--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -1,3 +1,9 @@
-<div class="graph">
-    <div style="height: auto" />
+<div class="graphView">
+    <div style="float: right">
+        <label for="node"></label>
+        <label for="edge"></label>
+        <input name ="node" style=" width:50%; border-radius: 5px" value="meme"/>
+            <input style="font-size: 20px" name="updateAll" type="submit" value="Update Graph" />
+    </div>
+
 </div>
