--- a/src/templates/sidebar_form.html
+++ b/src/templates/sidebar_form.html
@@ -57,10 +57,10 @@
 
         {% block edge_loop %} {% endblock %}
 
-        <input name="newEdge1" style=" width:20%; border-radius: 5px" placeholder="From"/>
+        <input name="newedgefrom" style=" width:20%; border-radius: 5px" placeholder="From"/>
         to
-        <input name="newEdge2" style=" width:20%; border-radius: 5px" placeholder="Dest."/>
-        <input style="border-radius: 10px" name="Add Edge" type="submit" value="Add"/>
+        <input name="newedgeto" style=" width:20%; border-radius: 5px" placeholder="Dest."/>
+        <input style="border-radius: 10px" name="addEdge" type="submit" value="Add"/>
         <br/>
     </div>
 </form>
