--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -7,7 +7,8 @@
         >
             <button type="button" class="btn btn-primary">Upload File</button>
             <button type="button" class="btn btn-primary">Download File</button>
-            <button type="button" class="btn btn-primary">Clear</button>
+            <button name="clear" value="Clear" type="submit" class="btn btn-primary">Clear</button>
+            
         </div>
     </form>
 
