--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,8 +12,29 @@
 
 
   <style>
+    html, body, div.container-fluid, div.row {
+      height: 100%;
+    }
+
     * {
       font-family: "Roboto", sans-serif;
+    }
+
+    .graph {
+      background-color: #eee;
+    }
+
+    .sidebar {
+      max-height: 100%;
+      height: 100%;
+      overflow: auto;
+    }
+
+    .graph {
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 
@@ -24,10 +45,9 @@
 
   <!-- Reference: https://simpleisbetterthancomplex.com/tutorial/2016/08/01/how-to-upload-files-with-django.html -->
 
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
+      <div class="col-md-3 sidebar">
         <h1>File Upload Testing</h1>
 
         <form method="POST" action="http://localhost:8000/csv_upload" enctype="multipart/form-data">
@@ -40,8 +60,57 @@
           <br />
           <button class="btn btn-primary" type="submit">Submit</button>
         </form>
+
+        <hr />
+
+        <div class="form-group">
+          <label for="node-list">Node list ({{nodes|length}})</label>
+          <form method="POST" action="http://localhost:8000/remove_node">
+            {% csrf_token %}
+              <select multiple name="nodes" class="form-control" id="node-list">
+                {% for node in nodes %}
+                  <option value="{{node}}">{{node}}</option>
+                {% endfor %}
+              </select>
+              <button class="btn btn-secondary" style="margin-top: 8px;" type="submit">Delete nodes</button>
+          </form>
+        </div>
+
+        <div class="form-group">
+          <label for="edge-list">Edge list ({{edges|length}})</label>
+          <form method="POST" action="http://localhost:8000/remove_edge">
+            {% csrf_token %}
+            <select multiple name="edges" class="form-control" id="edge-list">
+              {% for edge in edges %}
+              <option value="{{edge.0}}, {{edge.1}}">{{edge.0}} -> {{edge.1}}</option>
+              {% endfor %}
+            </select>
+            <button class="btn btn-secondary" style="margin-top: 8px;" type="submit">Delete edges</button>
+          </form>
+        </div>
+
+        <hr />
+
+        <div class="form-group">
+          <form method="POST" action="http://localhost:8000/add_edge">
+            {% csrf_token %}
+            <label>Create an edge</label>
+            <div class="row">
+              <div class="col-6">
+                <input id="new-edge-from" class="form-control" type="text" name="edge_from" placeholder="From" />
+              </div>
+              <div class="col-6">
+                <input id="new-edge-to" class="form-control" type="text" name="edge_to" placeholder="To" />
+              </div>
+            </div>
+            <button class="btn btn-secondary" style="margin-top: 8px;" type="submit">Create edge</button>
+            <small style="display: block; margin-top: 8px;">Nodes will be automatically created (if needed)</small>
+          </form>
+        </div>
       </div>
-      <div class="col-md-4"></div>
+      <div class="col-md-9 graph">
+        <img src="http://localhost:8000/graph" />
+      </div>
     </div>
   </div>
 
