--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous"
+    >
     <style type="text/css">
+        html, body {
+            height: 100%;
+            font-family: Roboto, sans-serif;
+            background: #eee;
+        }
+
         .sidenav {
             height: 100%;
-            width: 22vw;
-            min-width: 280px;
+            max-width: 350px;
             position: fixed;
             top: 0;
             left: 0;
-            /*background-color: rgba(241, 241, 241, 0.63);*/
-            box-shadow: 0 0 2px 5px rgba(143, 143, 143, 0.49);
+            background-color: white;
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
             overflow-x: hidden;
             padding-top: 20px;
             margin: 10px;
             border-radius: 10px;
         }
 
-        .sideTitle {
-            text-align: center;
+        .sideTitle > h1 {
+            text-align: left;
             font-size: 28px;
-            font-family: Roboto, sans-serif;
         }
 
         .sidenav a {
-            padding: 6px 8px 6px 16px;
+            padding: 6px 0;
             text-decoration: none;
             font-size: 25px;
             display: block;
@@ -37,10 +46,10 @@
         }
 
         .property {
-            margin: 10px;
-            padding: 5px;
-            border-radius: 10px;
-            border: 1px solid #dee2e6 !important;
+            margin: 10px 0;
+            padding: 8px 8px;
+            border-radius: 5px;
+            border: 1px solid #dee2e6;
         }
 
         .graphView {
@@ -51,14 +60,34 @@
             flex-direction: column;
         }
 
+        .scroll-bar {
+            scrollbar-width: thin;
+            scrollbar-color: rgba(128, 128, 128, 0.4) rgba(128, 128, 128, 0.1);
+        }
+
+        .scroll-bar::-webkit-scrollbar-track {
+            background-color: rgba(128, 128, 128, 0.1);
+            border-radius: 5px;
+        }
+
+        .scroll-bar::-webkit-scrollbar {
+            width: 6px;
+            height: 6px;
+            background-color: transparent;
+        }
+
+        .scroll-bar::-webkit-scrollbar-thumb {
+            background-color: rgba(128, 128, 128, 0.4);
+            border-radius: 5px;
+        }
+
+        form + form {
+            margin-top: 8px;
+        }
+
     </style>
     <title>NetView</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous"
-    >
 </head>
 
 <body>
