--- a/src/templates/sidebar_base.html
+++ b/src/templates/sidebar_base.html
@@ -1,14 +1,16 @@
-<div class="sidenav">
-    <div class="sideTitle">Sample Graph 1 Info</div>
-
-    <div class="property">
-        <span style="font-weight: bold">Type</span>
-        <span style="float: right">
+<div class="sidenav container">
+    <div class="sideTitle">
+        <h1>
+            Sample Graph 1 Info
+        </h1>
+        <span class="badge badge-pill badge-primary">
             {% block graph_type %}
             Hardcoded
             {% endblock %}
         </span>
     </div>
+
+    <hr />
 
     {% block graph_form %}
     Form of Nodes & Edges replace this
