--- a/src/templates/sidebar_context.html
+++ b/src/templates/sidebar_context.html
@@ -2,26 +2,30 @@
 
 {% block node_loop %}
 
-{% for node in nodes %}
-<div>
-    <label style="width: 100%">
-        {{forloop.counter}}.
-        <input
-                name="node{{forloop.counter}}"
-                style=" width:50%; border-radius: 5px; display: inline"
-                class="form-control"
-                value="{{ node }}"
-        />
-        <input
-                style="border-radius: 10px; float: right"
-                name="deleteNode"
-                class="btn btn-outline-danger btn-sm"
-                type="submit"
-                value="Delete Node {{forloop.counter}}"
+{% if nodes|length == 0 %}
+    <p style="font-family: monospace;" class="mb-0">There aren't any ports >:(</p>
+{% endif %}
 
-        />
-    </label>
-</div>
+{% for node in nodes %}
+<form name="update" action="/" method="POST"> {% csrf_token %}
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">
+                {{ forloop.counter }}
+            </span>
+        </div>
+        <input type="text" class="form-control" name="node{{forloop.counter}}" value="{{ node }}">
+        <div class="input-group-append">
+            <input type="hidden" value="Delete Node {{forloop.counter}}" name="deleteNode" />
+            <button class="btn btn-outline-danger" type="submit">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+</form>
 {% endfor %}
 
 {% endblock %}
@@ -29,32 +33,36 @@
 
 {% block edge_loop %}
 
+{% if edges|length == 0 %}
+    <p style="font-family: monospace;" class="mb-0">There aren't any edges >:(</p>
+{% endif %}
+
 {% for edge in edges %}
-<div>
-    <label>
-        {{forloop.counter}}.
-        <input
-                name="edge{{forloop.counter}}from"
-                style=" width:20%; border-radius: 5px; display: inline"
-                class="form-control"
-                value="{{ edge.0 }}"
-        />
-        to
-        <input
-                name="edge{{forloop.counter}}to"
-                style=" width:20%; border-radius: 5px; display: inline"
-                class="form-control"
-                value="{{ edge.1 }}"
-        />
-        <input
-                style="border-radius: 10px; float: right"
-                name="deleteEdge"
-                class="btn btn-outline-danger btn-sm"
-                type="submit"
-                value="Delete Edge {{forloop.counter}}"
-        />
-    </label>
-</div>
+<form name="update" action="/" method="POST"> {% csrf_token %}
+    <div class="input-group">
+        <div class="input-group-prepend">
+            <span class="input-group-text">
+                {{forloop.counter}}
+            </span>
+        </div>
+        <input type="text" class="form-control" name="edge{{forloop.counter}}from" value="{{ edge.0 }}">
+        <div class="input-group-append">
+            <span class="input-group-text" style="font-family: monospace;">
+                =>
+            </span>
+        </div>
+        <input type="text" class="form-control" name="edge{{forloop.counter}}to" value="{{ edge.1 }}">
+        <input type="hidden" name="deleteEdge" value="Delete Edge {{forloop.counter}}" />
+        <div class="input-group-append">
+            <button class="btn btn-outline-danger" type="submit">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+</form>
 {% endfor %}
 
 {% endblock %}
