--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -66,10 +66,10 @@
           align-items: center;
         }
 
-        .graphView > form {
+        .graphView > .top-fixed {
             position: fixed;
-            top: 10px;
-            right: 10px;
+            top: 16px;
+            right: 16px;
         }
 
         .scroll-bar {
