--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,13 +15,12 @@
         }
 
         .sidenav {
-            height: 100%;
             max-width: 350px;
-            position: fixed;
+            height: 97%;
             top: 0;
             left: 0;
             background-color: white;
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
             overflow-x: hidden;
             padding-top: 20px;
             margin: 10px;
@@ -34,9 +33,12 @@
         }
 
         .sideboy {
-            position: fixed;
+            /*position: fixed;*/
             bottom: 0;
             left: 0;
+            height: 100%;
+            width: 26%;
+            min-width: 250px;
         }
 
         .sidenav a {
@@ -59,11 +61,13 @@
         }
 
         .graphView {
-          height: 100%;
-          display: flex;
-          flex-flow: column nowrap;
-          justify-content: center;
-          align-items: center;
+            height: 100%;
+            width: 73%; /* idk */
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+            align-self: center;
         }
 
         .graphView > .top-fixed {
@@ -98,10 +102,10 @@
         }
 
         form[name="sauceupdate"] {
-          display: flex;
-          flex-flow: column-reverse nowrap;
-          justify-content: stretch;
-          align-items: stretch;
+            display: flex;
+            flex-flow: column-reverse nowrap;
+            justify-content: stretch;
+            align-items: stretch;
         }
 
     </style>
@@ -111,11 +115,11 @@
 
 <body>
 
-<div class="sideboy">
-    {% include 'sidebar_context.html' %}
-</div>
+<div style="display: flex">
+    <div class="sideboy">
+        {% include 'sidebar_context.html' %}
+    </div>
 
-<div style="margin-left: 400px;">
     {% include 'graph_base.html' %}
 </div>
 
