update handling of icons

--- a/src/templates/sidebar_form.html
+++ b/src/templates/sidebar_form.html
@@ -40,7 +40,7 @@
         <input type="text" class="form-control" placeholder="From..." name="newedgefrom">
         <div class="input-group-append">
             <span class="input-group-text" style="font-family: monospace;">
-                =>
+                {% include "icons.html" with icon="right_arrow" %}
             </span>
         </div>
         <input type="text" class="form-control" placeholder="To..." name="newedgeto">
