Download button is no more

--- a/src/templates/graph_base.html
+++ b/src/templates/graph_base.html
@@ -9,7 +9,7 @@
              role="group"
         >
             <button type="submit" name="open-upload" value="yee" class="btn btn-primary">Upload File</button>
-            <button type="button" class="btn btn-primary">Download File</button>
+            <!--<button type="button" class="btn btn-primary">Download File</button>-->
             <button name="clear" value="Clear" type="submit" class="btn btn-primary">Clear</button>
         </div>
     </form>
